--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -14,6 +14,9 @@ figcaption {
   clear: left;
   width: 300px;
   margin: 0 1% 1% 0;
+  border: 1px solid;
+  border-top: transparent;
+  border-left: transparent;
 }
 
 article{
